Updated full project files

--- a/financing.html
+++ b/financing.html
@@ -39,7 +39,7 @@
 </head>
 <style>
   .financing-hero {
-   background-image: linear-gradient(to top, #101840 0%, #081e67 100%);
+    background-image: linear-gradient(to top, #101840 0%, #081e67 100%);
     color: white;
     padding: 120px 0 80px;
     text-align: center;
@@ -141,19 +141,18 @@
     margin: 60px 0;
   }
 
-.trust-badges img {
-  height: 50px;
-  margin: 0 15px;
-  opacity: 0.8;
-  transition: all 0.3s ease;
-}
+  .trust-badges img {
+    height: 50px;
+    margin: 0 15px;
+    opacity: 0.8;
+    transition: all 0.3s ease;
+  }
 
-.trust-badges img:hover {
-  opacity: 1;
-  transform: scale(1.1);
-  filter: grayscale(0%) brightness(1) invert(0);
-}
-
+  .trust-badges img:hover {
+    opacity: 1;
+    transform: scale(1.1);
+    filter: grayscale(0%) brightness(1) invert(0);
+  }
 </style>
 
 <body>
@@ -189,12 +188,9 @@
           <li><a href="about.html">About Us</a></li>
 
           <!-- Services (only dropdown item) -->
-          <li class="menu-item-has-children">
+          <li>
             <a href="service.html">Services</a>
-            <ul class="sub-menu">
-              <li><a href="service.html">All Services</a></li>
-              <!-- <li><a href="service-details.html">Service Details</a></li> -->
-            </ul>
+
           </li>
 
           <!-- Financing -->
@@ -253,59 +249,9 @@
                     <li><a href="about.html">About Us</a></li>
 
                     <!-- SERVICES DROPDOWN START -->
-                    <li class="menu-item-has-children">
+                    <li>
                       <a href="service.html">Services</a>
-                      <ul class="sub-menu">
 
-                        <!-- Air Conditioning -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Air Conditioning</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#air-conditioning">AC Replacement in Winnipeg, MB</a></li>
-                            <li><a href="service.html#air-conditioning">AC Service in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                        <!-- Heating -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Heating</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#heating">Furnace Installation in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heating">Furnace Maintenance in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heating">Furnace Repair in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heating">Furnace Replacement in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heating">Furnace Tune-Up in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                        <!-- Heat Pump -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Heat Pump</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#heat-pump">Heat Pump Maintenance in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heat-pump">Heat Pump Replacement in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heat-pump">Heat Pump Service in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heat-pump">Heating Company in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                        <!-- Mini Split -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Mini Split</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#mini-split">Mini Split HVAC in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                        <!-- Indoor Air Quality -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Indoor Air Quality</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#air-quality">Air Filter Replacement in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                      </ul>
                     </li>
                     <!-- SERVICES DROPDOWN END -->
 
@@ -345,7 +291,8 @@
   <section class="financing-hero" style="margin-top: 180px;">
     <div class="container">
       <h1 style="color: #f8f9fa;">Affordable Financing for Your Comfort</h1>
-      <p style="color: #f8f9fad7;">Get the HVAC system you need today with flexible, low-interest financing options. No upfront costs. Easy
+      <p style="color: #f8f9fad7;">Get the HVAC system you need today with flexible, low-interest financing options. No
+        upfront costs. Easy
         monthly payments.</p>
       <a href="#apply" class="th-btn style3">Apply for Financing Now <i class="fas fa-arrow-right ms-2"></i></a>
     </div>
@@ -405,7 +352,8 @@
           <div class="title-area text-center"><span class="sub-title shape-white"><img
                 src="assets/img/theme-img/title_icon_white.svg" alt="Icon">Pricing Plan</span>
             <h2 class="sec-title" style="color: #101840;">Our Best Pricing Plan</h2>
-            <p class="sec-text" style="color: #101840;">The popular belief, Lorem Ipsum is not simply random text. It has roots in a
+            <p class="sec-text" style="color: #101840;">The popular belief, Lorem Ipsum is not simply random text. It
+              has roots in a
               piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
           </div>
         </div>
@@ -532,7 +480,7 @@
                 <div class="about-logo"><a href="index.html"><img src="assets/img/logo/logo.svg" alt="Rakar"></a></div>
                 <p class="about-text">Going forward, a new normal that has evolved from generation is on the runway
                   heading towards a streamlined cloud solution.</p>
-           <div class="th-social">
+                <div class="th-social">
                   <a href="https://www.facebook.com/paswpg/">
                     <i class="fab fa-facebook-f"></i>
                   </a>
