--- a/index.html
+++ b/index.html
@@ -70,12 +70,8 @@
           <li><a href="about.html">About Us</a></li>
 
           <!-- Services (only dropdown item) -->
-          <li class="menu-item-has-children">
+          <li>
             <a href="service.html">Services</a>
-            <ul class="sub-menu">
-              <li><a href="service.html">All Services</a></li>
-              <!-- <li><a href="service-details.html">Service Details</a></li> -->
-            </ul>
           </li>
 
           <!-- Financing -->
@@ -134,59 +130,9 @@
                     <li><a href="about.html">About Us</a></li>
 
                     <!-- SERVICES DROPDOWN START -->
-                    <li class="menu-item-has-children">
+                    <li>
                       <a href="service.html">Services</a>
-                      <ul class="sub-menu">
-
-                        <!-- Air Conditioning -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Air Conditioning</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#air-conditioning">AC Replacement in Winnipeg, MB</a></li>
-                            <li><a href="service.html#air-conditioning">AC Service in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                        <!-- Heating -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Heating</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#heating">Furnace Installation in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heating">Furnace Maintenance in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heating">Furnace Repair in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heating">Furnace Replacement in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heating">Furnace Tune-Up in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                        <!-- Heat Pump -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Heat Pump</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#heat-pump">Heat Pump Maintenance in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heat-pump">Heat Pump Replacement in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heat-pump">Heat Pump Service in Winnipeg, MB</a></li>
-                            <li><a href="service.html#heat-pump">Heating Company in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                        <!-- Mini Split -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Mini Split</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#mini-split">Mini Split HVAC in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                        <!-- Indoor Air Quality -->
-                        <li class="menu-item-has-children">
-                          <a href="#">Indoor Air Quality</a>
-                          <ul class="sub-menu">
-                            <li><a href="service.html#air-quality">Air Filter Replacement in Winnipeg, MB</a></li>
-                          </ul>
-                        </li>
-
-                      </ul>
+                  
                     </li>
                     <!-- SERVICES DROPDOWN END -->
 
@@ -600,7 +546,7 @@
       <div class="row">
         <div class="col-xl-5">
           <div class="img-box2">
-            <div class="img1"><img src="assets/img/logo/why2.png" alt="Why"></div>
+            <div class="img1"><img src="assets/img/logo/why choose section.png" alt="Why"></div>
             <!-- <a
               href="https://www.youtube.com/watch?v=_sI_Ps7JSEk" class="play-btn popup-video"><i
                 class="fas fa-play"></i></a> -->
@@ -1103,157 +1049,93 @@
       </div>
     </div>
   </section>
-  <section class="space" data-bg-src="assets/img/bg/pattern_bg_2.jpg">
-    <div class="shape-mockup spin" data-top="15%" data-right="6%"><img src="assets/img/shape/dots_1.svg" alt="shape">
+ <section class="space">
+  <div class="container">
+    <div class="title-area text-center">
+      <span class="sub-title">
+        <img src="assets/img/theme-img/title_icon.svg" alt="Icon">Pricing Plan
+      </span>
+      <h2 class="sec-title">Choose a Plan That Fits Your Needs</h2>
+      <p class="sec-text">We’ve designed our plans to keep your comfort, budget, and peace of mind in balance.</p>
     </div>
-    <div class="shape-mockup spin" data-bottom="6%" data-left="4%"><img src="assets/img/shape/dots_1.svg" alt="shape">
-    </div>
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-xl-8">
-          <div class="title-area text-center"><span class="sub-title shape-white"><img
-                src="assets/img/theme-img/title_icon_white.svg" alt="Icon">Pricing Plan</span>
-            <h2 class="sec-title text-white">Our Best Pricing Plan</h2>
-            <p class="sec-text text-light">The popular belief, Lorem Ipsum is not simply random text. It has roots in a
-              piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+
+    <div class="row gy-4 tag-black justify-content-center">
+
+      <!-- Basic Plan -->
+      <div class="hover-item col-xl-4 col-md-6">
+        <div class="price-card">
+          <div class="box-shape">
+            <img src="assets/img/shape/lines_3.png" alt="shape">
+          </div>
+          <h3 class="box-title">Basic Care</h3>
+          <p class="box-price">$99<span class="duration">/month</span></p>
+          <div class="box-list">
+            <ul>
+              <li>1 Monthly Inspection</li>
+              <li>General Repair Check</li>
+              <li class="unavailable">Full Maintenance</li>
+              <li class="unavailable">Electrical Fault Fix</li>
+              <li class="unavailable">AC Service</li>
+            </ul>
+          </div>
+          <div class="box-footer">
+            <a href="pricing.html" class="th-btn">Get Started<i class="far fa-arrow-right ms-2"></i></a>
           </div>
         </div>
       </div>
-      <div class="row gy-4">
-        <div class="hover-item col-xl-3 col-md-6">
-          <div class="price-card">
-            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div>
-            <h3 class="box-title">Basic Plan</h3>
-            <p class="box-price">$99.00<span class="duration">/Monthly</span></p>
-            <div class="box-list">
-              <ul>
-                <li>Monthly Inspection</li>
-                <li>General Repair</li>
-                <li class="unavailable">Maintenance</li>
-                <li class="unavailable">Fixing of Faulty Wiring</li>
-                <li class="unavailable">Ac Condition Repair</li>
-              </ul>
-            </div>
-            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
-                  class="far fa-arrow-right ms-2"></i></a></div>
+
+      <!-- Standard Plan -->
+      <div class="hover-item item-active col-xl-4 col-md-6">
+        <div class="price-card">
+          <div class="box-shape">
+            <img src="assets/img/shape/lines_3.png" alt="shape">
           </div>
-        </div>
-        <div class="hover-item item-active col-xl-3 col-md-6">
-          <div class="price-card">
-            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div><span class="tag">Popular
-              Plan</span>
-            <h3 class="box-title">Standard</h3>
-            <p class="box-price">$129.00<span class="duration">/Monthly</span></p>
-            <div class="box-list">
-              <ul>
-                <li>Monthly Inspection</li>
-                <li>General Repair</li>
-                <li>Maintenance</li>
-                <li class="unavailable">Fixing of Faulty Wiring</li>
-                <li class="unavailable">Ac Condition Repair</li>
-              </ul>
-            </div>
-            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
-                  class="far fa-arrow-right ms-2"></i></a></div>
+          <span class="tag">Most Popular</span>
+          <h3 class="box-title">Standard Care</h3>
+          <p class="box-price">$149<span class="duration">/month</span></p>
+          <div class="box-list">
+            <ul>
+              <li>Monthly Inspection</li>
+              <li>General Repairs</li>
+              <li>Full Maintenance</li>
+              <li class="unavailable">Electrical Fault Fix</li>
+              <li class="unavailable">AC Service</li>
+            </ul>
           </div>
-        </div>
-        <div class="hover-item col-xl-3 col-md-6">
-          <div class="price-card">
-            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div>
-            <h3 class="box-title">Premium</h3>
-            <p class="box-price">$199.00<span class="duration">/Monthly</span></p>
-            <div class="box-list">
-              <ul>
-                <li>Monthly Inspection</li>
-                <li>General Repair</li>
-                <li>Maintenance</li>
-                <li>Fixing of Faulty Wiring</li>
-                <li class="unavailable">Ac Condition Repair</li>
-              </ul>
-            </div>
-            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
-                  class="far fa-arrow-right ms-2"></i></a></div>
-          </div>
-        </div>
-        <div class="hover-item col-xl-3 col-md-6">
-          <div class="price-card">
-            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div>
-            <h3 class="box-title">Dedicated Plan</h3>
-            <p class="box-price">$299.00<span class="duration">/Monthly</span></p>
-            <div class="box-list">
-              <ul>
-                <li>Monthly Inspection</li>
-                <li>General Repair</li>
-                <li>Maintenance</li>
-                <li>Fixing of Faulty Wiring</li>
-                <li>Ac Condition Repair</li>
-              </ul>
-            </div>
-            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
-                  class="far fa-arrow-right ms-2"></i></a></div>
+          <div class="box-footer">
+            <a href="pricing.html" class="th-btn">Get Started<i class="far fa-arrow-right ms-2"></i></a>
           </div>
         </div>
       </div>
+
+      <!-- Premium Plan -->
+      <div class="hover-item col-xl-4 col-md-6">
+        <div class="price-card">
+          <div class="box-shape">
+            <img src="assets/img/shape/lines_3.png" alt="shape">
+          </div>
+          <h3 class="box-title">Premium Care</h3>
+          <p class="box-price">$199<span class="duration">/month</span></p>
+          <div class="box-list">
+            <ul>
+              <li>Monthly Inspection</li>
+              <li>All General Repairs</li>
+              <li>Complete Maintenance</li>
+              <li>Electrical Fault Fix</li>
+              <li>AC Repair & Service</li>
+            </ul>
+          </div>
+          <div class="box-footer">
+            <a href="pricing.html" class="th-btn">Get Started<i class="far fa-arrow-right ms-2"></i></a>
+          </div>
+        </div>
+      </div>
+
     </div>
-  </section>
-  <!-- <section class="space" id="blog-sec">
-    <div class="container">
-      <div class="row justify-content-between align-items-center">
-        <div class="col-xl-4 col-lg-5 col-md-7">
-          <div class="title-area text-center text-md-start"><span class="sub-title"><img
-                src="assets/img/theme-img/title_icon.svg" alt="shape">Blog & Articles</span>
-            <h2 class="sec-title">Every Single Update From Rakar</h2>
-          </div>
-        </div>
-        <div class="col-md-auto">
-          <div class="sec-btn mt-n3 mt-md-0"><a href="blog.html" class="th-btn style4">View All Articles<i
-                class="far fa-arrow-right ms-2"></i></a></div>
-        </div>
-      </div>
-      <div class="row gy-4">
-        <div class="col-xl-4 col-md-6">
-          <div class="blog-card"><a href="blog-details.html" class="blog-img"><img src="assets/img/blog/blog_1_1.jpg"
-                alt="blog image"> </a><span class="box-date">15 Jan, 2024</span>
-            <div class="blog-content">
-              <div class="blog-meta"><a href="blog.html"><i class="fas fa-user"></i>By Rakar</a> <a href="blog.html"><i
-                    class="fas fa-tags"></i>Repair</a></div>
-              <h3 class="box-title"><a href="blog-details.html">All in one 5 Signs You Need To Repair Your Home Roof</a>
-              </h3>
-              <p class="box-text">There are full service engage company is to provide solution company Loream are full
-                service engage company.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-md-6">
-          <div class="blog-card"><a href="blog-details.html" class="blog-img"><img src="assets/img/blog/blog_1_2.jpg"
-                alt="blog image"> </a><span class="box-date">16 Jan, 2024</span>
-            <div class="blog-content">
-              <div class="blog-meta"><a href="blog.html"><i class="fas fa-user"></i>By Rakar</a> <a href="blog.html"><i
-                    class="fas fa-tags"></i>Service</a></div>
-              <h3 class="box-title"><a href="blog-details.html">Interior renovation in the home using up-to-date
-                  tools</a></h3>
-              <p class="box-text">There are full service engage company is to provide solution company Loream are full
-                service engage company.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-4 col-md-6">
-          <div class="blog-card"><a href="blog-details.html" class="blog-img"><img src="assets/img/blog/blog_1_3.jpg"
-                alt="blog image"> </a><span class="box-date">17 Jan, 2024</span>
-            <div class="blog-content">
-              <div class="blog-meta"><a href="blog.html"><i class="fas fa-user"></i>By Rakar</a> <a href="blog.html"><i
-                    class="fas fa-tags"></i>Repair</a></div>
-              <h3 class="box-title"><a href="blog-details.html">AC repair in the home using up-to-date equipment</a>
-              </h3>
-              <p class="box-text">There are full service engage company is to provide solution company Loream are full
-                service engage company.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <footer class="footer-wrapper footer-layout1" data-bg-src="assets/img/bg/footer_bg_1.jpg">
+  </div>
+</section>
+
+ <footer class="footer-wrapper footer-layout1" data-bg-src="assets/img/bg/footer_bg_1.jpg">
     <div class="shape-mockup spin" data-top="14%" data-left="4%"><img src="assets/img/shape/dots_1.svg" alt="shape">
     </div>
     <div class="shape-mockup spin" data-bottom="18%" data-right="7%"><img src="assets/img/shape/dots_1.svg" alt="shape">
