--- a/testimonial.html
+++ b/testimonial.html
@@ -72,12 +72,9 @@
           <li><a href="about.html">About Us</a></li>
 
           <!-- Services (only dropdown item) -->
-          <li class="menu-item-has-children">
+          <li>
             <a href="service.html">Services</a>
-            <ul class="sub-menu">
-              <li><a href="service.html">All Services</a></li>
-              <!-- <li><a href="service-details.html">Service Details</a></li> -->
-            </ul>
+           
           </li>
 
           <!-- Financing -->
@@ -135,66 +132,16 @@
                   <li><a href="about.html">About Us</a></li>
 
                   <!-- SERVICES DROPDOWN START -->
-                  <li class="menu-item-has-children">
+                  <li>
                     <a href="service.html">Services</a>
-                    <ul class="sub-menu">
-
-                      <!-- Air Conditioning -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Air Conditioning</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#air-conditioning">AC Replacement in Winnipeg, MB</a></li>
-                          <li><a href="service.html#air-conditioning">AC Service in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                      <!-- Heating -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Heating</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#heating">Furnace Installation in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heating">Furnace Maintenance in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heating">Furnace Repair in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heating">Furnace Replacement in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heating">Furnace Tune-Up in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                      <!-- Heat Pump -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Heat Pump</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#heat-pump">Heat Pump Maintenance in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heat-pump">Heat Pump Replacement in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heat-pump">Heat Pump Service in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heat-pump">Heating Company in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                      <!-- Mini Split -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Mini Split</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#mini-split">Mini Split HVAC in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                      <!-- Indoor Air Quality -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Indoor Air Quality</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#air-quality">Air Filter Replacement in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                    </ul>
+                   
                   </li>
                   <!-- SERVICES DROPDOWN END -->
 
-                  <li><a href="#">Financing</a></li>
-                  <li><a href="#">Maintenance Plan</a></li>
+                  <li><a href="financing.html">Financing</a></li>
+                  <li><a href="pricing.html">Maintenance Plan</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
-                  <li><a href="#">Location</a></li>
+                  <li><a href="location.html">Location</a></li>
                 </ul>
               </nav>
               <button type="button" class="th-menu-toggle d-block d-lg-none">
