--- a/pricing.html
+++ b/pricing.html
@@ -72,12 +72,9 @@
           <li><a href="about.html">About Us</a></li>
 
           <!-- Services (only dropdown item) -->
-          <li class="menu-item-has-children">
+          <li>
             <a href="service.html">Services</a>
-            <ul class="sub-menu">
-              <li><a href="service.html">All Services</a></li>
-              <!-- <li><a href="service-details.html">Service Details</a></li> -->
-            </ul>
+           
           </li>
 
           <!-- Financing -->
@@ -135,59 +132,9 @@
                   <li><a href="about.html">About Us</a></li>
 
                   <!-- SERVICES DROPDOWN START -->
-                  <li class="menu-item-has-children">
+                  <li>
                     <a href="service.html">Services</a>
-                    <ul class="sub-menu">
-
-                      <!-- Air Conditioning -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Air Conditioning</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#air-conditioning">AC Replacement in Winnipeg, MB</a></li>
-                          <li><a href="service.html#air-conditioning">AC Service in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                      <!-- Heating -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Heating</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#heating">Furnace Installation in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heating">Furnace Maintenance in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heating">Furnace Repair in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heating">Furnace Replacement in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heating">Furnace Tune-Up in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                      <!-- Heat Pump -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Heat Pump</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#heat-pump">Heat Pump Maintenance in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heat-pump">Heat Pump Replacement in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heat-pump">Heat Pump Service in Winnipeg, MB</a></li>
-                          <li><a href="service.html#heat-pump">Heating Company in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                      <!-- Mini Split -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Mini Split</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#mini-split">Mini Split HVAC in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                      <!-- Indoor Air Quality -->
-                      <li class="menu-item-has-children">
-                        <a href="#">Indoor Air Quality</a>
-                        <ul class="sub-menu">
-                          <li><a href="service.html#air-quality">Air Filter Replacement in Winnipeg, MB</a></li>
-                        </ul>
-                      </li>
-
-                    </ul>
+                  
                   </li>
                   <!-- SERVICES DROPDOWN END -->
 
@@ -220,89 +167,92 @@
       </div>
     </div>
   </div>
-  <section class="space">
-    <div class="container">
-      <div class="title-area text-center"><span class="sub-title"><img src="assets/img/theme-img/title_icon.svg"
-            alt="Icon">Pricing Plan</span>
-        <h2 class="sec-title">Our Best Price we offer</h2>
-      </div>
-      <div class="row gy-4 tag-black">
-        <div class="hover-item col-xl-3 col-md-6">
-          <div class="price-card">
-            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div>
-            <h3 class="box-title">Basic Plan</h3>
-            <p class="box-price">$99.00<span class="duration">/Monthly</span></p>
-            <div class="box-list">
-              <ul>
-                <li>Monthly Inspection</li>
-                <li>General Repair</li>
-                <li class="unavailable">Maintenance</li>
-                <li class="unavailable">Fixing of Faulty Wiring</li>
-                <li class="unavailable">Ac Condition Repair</li>
-              </ul>
-            </div>
-            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
-                  class="far fa-arrow-right ms-2"></i></a></div>
-          </div>
-        </div>
-        <div class="hover-item item-active col-xl-3 col-md-6">
-          <div class="price-card">
-            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div><span class="tag">Popular
-              Plan</span>
-            <h3 class="box-title">Standard</h3>
-            <p class="box-price">$129.00<span class="duration">/Monthly</span></p>
-            <div class="box-list">
-              <ul>
-                <li>Monthly Inspection</li>
-                <li>General Repair</li>
-                <li>Maintenance</li>
-                <li class="unavailable">Fixing of Faulty Wiring</li>
-                <li class="unavailable">Ac Condition Repair</li>
-              </ul>
-            </div>
-            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
-                  class="far fa-arrow-right ms-2"></i></a></div>
-          </div>
-        </div>
-        <div class="hover-item col-xl-3 col-md-6">
-          <div class="price-card">
-            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div>
-            <h3 class="box-title">Premium</h3>
-            <p class="box-price">$199.00<span class="duration">/Monthly</span></p>
-            <div class="box-list">
-              <ul>
-                <li>Monthly Inspection</li>
-                <li>General Repair</li>
-                <li>Maintenance</li>
-                <li>Fixing of Faulty Wiring</li>
-                <li class="unavailable">Ac Condition Repair</li>
-              </ul>
-            </div>
-            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
-                  class="far fa-arrow-right ms-2"></i></a></div>
-          </div>
-        </div>
-        <div class="hover-item col-xl-3 col-md-6">
-          <div class="price-card">
-            <div class="box-shape"><img src="assets/img/shape/lines_3.png" alt="shape"></div>
-            <h3 class="box-title">Dedicated Plan</h3>
-            <p class="box-price">$299.00<span class="duration">/Monthly</span></p>
-            <div class="box-list">
-              <ul>
-                <li>Monthly Inspection</li>
-                <li>General Repair</li>
-                <li>Maintenance</li>
-                <li>Fixing of Faulty Wiring</li>
-                <li>Ac Condition Repair</li>
-              </ul>
-            </div>
-            <div class="box-footer"><a href="pricing.html" class="th-btn">Get Started<i
-                  class="far fa-arrow-right ms-2"></i></a></div>
-          </div>
-        </div>
-      </div>
+<section class="space">
+  <div class="container">
+    <div class="title-area text-center">
+      <span class="sub-title">
+        <img src="assets/img/theme-img/title_icon.svg" alt="Icon">Pricing Plan
+      </span>
+      <h2 class="sec-title">Choose a Plan That Fits Your Needs</h2>
+      <p class="sec-text">We’ve designed our plans to keep your comfort, budget, and peace of mind in balance.</p>
     </div>
-  </section>
+
+    <div class="row gy-4 tag-black justify-content-center">
+
+      <!-- Basic Plan -->
+      <div class="hover-item col-xl-4 col-md-6">
+        <div class="price-card">
+          <div class="box-shape">
+            <img src="assets/img/shape/lines_3.png" alt="shape">
+          </div>
+          <h3 class="box-title">Basic Care</h3>
+          <p class="box-price">$99<span class="duration">/month</span></p>
+          <div class="box-list">
+            <ul>
+              <li>1 Monthly Inspection</li>
+              <li>General Repair Check</li>
+              <li class="unavailable">Full Maintenance</li>
+              <li class="unavailable">Electrical Fault Fix</li>
+              <li class="unavailable">AC Service</li>
+            </ul>
+          </div>
+          <div class="box-footer">
+            <a href="pricing.html" class="th-btn">Get Started<i class="far fa-arrow-right ms-2"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Standard Plan -->
+      <div class="hover-item item-active col-xl-4 col-md-6">
+        <div class="price-card">
+          <div class="box-shape">
+            <img src="assets/img/shape/lines_3.png" alt="shape">
+          </div>
+          <span class="tag">Most Popular</span>
+          <h3 class="box-title">Standard Care</h3>
+          <p class="box-price">$149<span class="duration">/month</span></p>
+          <div class="box-list">
+            <ul>
+              <li>Monthly Inspection</li>
+              <li>General Repairs</li>
+              <li>Full Maintenance</li>
+              <li class="unavailable">Electrical Fault Fix</li>
+              <li class="unavailable">AC Service</li>
+            </ul>
+          </div>
+          <div class="box-footer">
+            <a href="pricing.html" class="th-btn">Get Started<i class="far fa-arrow-right ms-2"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Premium Plan -->
+      <div class="hover-item col-xl-4 col-md-6">
+        <div class="price-card">
+          <div class="box-shape">
+            <img src="assets/img/shape/lines_3.png" alt="shape">
+          </div>
+          <h3 class="box-title">Premium Care</h3>
+          <p class="box-price">$199<span class="duration">/month</span></p>
+          <div class="box-list">
+            <ul>
+              <li>Monthly Inspection</li>
+              <li>All General Repairs</li>
+              <li>Complete Maintenance</li>
+              <li>Electrical Fault Fix</li>
+              <li>AC Repair & Service</li>
+            </ul>
+          </div>
+          <div class="box-footer">
+            <a href="pricing.html" class="th-btn">Get Started<i class="far fa-arrow-right ms-2"></i></a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
   <!-- <div class="video-sec1" data-bg-src="assets/img/normal/video_1.jpg">
     <div class="container">
       <div class="video-content1"><a href="https://www.youtube.com/watch?v=_sI_Ps7JSEk"
