--- a/location.html
+++ b/location.html
@@ -128,9 +128,9 @@
 <body>
   <!-- Preloader -->
   <div class="preloader"><button class="th-btn preloaderCls">Cancel Preloader</button>
-    <div class="preloader-inner">
+    <!-- <div class="preloader-inner">
       <div class="loader"><span></span> <span></span> <span></span> <span></span> <span></span> <span></span></div>
-    </div>
+    </div> -->
   </div>
 
   <!-- Color Switcher (Optional) -->
