--- a/pricing.html
+++ b/pricing.html
@@ -41,9 +41,9 @@
 
 <body>
   <div class="preloader"><button class="th-btn preloaderCls">Cancel Preloader</button>
-    <div class="preloader-inner">
+    <!-- <div class="preloader-inner">
       <div class="loader"><span></span> <span></span> <span></span> <span></span> <span></span> <span></span></div>
-    </div>
+    </div> -->
   </div>
   <div class="color-scheme"><button class="switchIcon"><i class="fa-solid fa-palette"></i></button>
     <h4 class="color-scheme-title"><i class="far fa-palette"></i> Color Switcher</h4>
